<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".complaint_management">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backgroundmobile"
         />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="599dp"
        android:layout_height="830dp"
        android:alpha="0.4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/techflower" />

    <LinearLayout
        android:id="@+id/TopNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="3dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="55dp"
            android:layout_height="54dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/avatar_icon_desc" />

        <View
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="65dp"
            android:layout_height="54dp"
            tools:layout_editor_absoluteX="330dp"
            tools:layout_editor_absoluteY="16dp"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            app:srcCompat="@drawable/chat"
            android:contentDescription="@string/chat_icon_desc" />

    </LinearLayout>

    <ImageView
        android:id="@+id/addComplaintb"
        android:layout_width="88dp"
        android:layout_height="79dp"
        android:layout_gravity="start"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        android:layout_marginBottom="556dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/complaint"
         />

    <LinearLayout
        android:id="@+id/bottomNavigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="65dp"
            android:layout_height="54dp"
            app:srcCompat="@drawable/alerts"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="660dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/alerts_icon_desc" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="60dp"
            android:layout_height="54dp"
            app:srcCompat="@drawable/suitcase"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="660dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/suitcase_icon_desc" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="65dp"
            android:layout_height="54dp"
            app:srcCompat="@drawable/home1"
            tools:layout_editor_absoluteX="162dp"
            tools:layout_editor_absoluteY="663dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/home_icon_desc"/>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="54dp"
            android:layout_height="71dp"
            app:srcCompat="@drawable/globalconnection"
            tools:layout_editor_absoluteX="253dp"
            tools:layout_editor_absoluteY="651dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/global_connection_icon_desc"
            />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="69dp"
            android:layout_height="59dp"
            app:srcCompat="@drawable/jobooffer"
            tools:layout_editor_absoluteX="323dp"
            tools:layout_editor_absoluteY="660dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/job_offer_icon_desc"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>