<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddComplaintActivity">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/backgroundmobile" />

    <LinearLayout
        android:id="@+id/TopNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="55dp"
            android:layout_height="54dp"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/avatar_icon_desc"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp"
            tools:srcCompat="@tools:sample/avatars" />

        <View
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="65dp"
            android:layout_height="54dp"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/chat_icon_desc"
            app:srcCompat="@drawable/chat"
            tools:layout_editor_absoluteX="330dp"
            tools:layout_editor_absoluteY="16dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/Form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TopNavigation">

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:text="@string/complaint_question"

            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="108dp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="142dp"
            android:layout_height="54dp"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:layout_weight="20"
            android:background="@android:color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"

            android:text="@string/ask_for_title"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="108dp" />

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:background="@drawable/rounded_corner"
            android:ems="20"
            android:inputType="text"
            android:padding="15dp"
            android:text="title"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="225dp" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"

            android:text="@string/ask_for_description"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="108dp" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:background="@drawable/rounded_corner"
            android:ems="20"
            android:inputType="text"
            android:padding="15dp"
            android:text="description"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="225dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:text="upload the image"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imgGallery"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:scaleType="fitXY" />

    </LinearLayout>

    <Button
        android:id="@+id/add_complaint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add complaint"
        app:layout_constraintTop_toBottomOf="@id/Form"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="607dp" />

    <LinearLayout
        android:id="@+id/bottomNavigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Form"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="65dp"
            android:layout_height="54dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/alerts_icon_desc"
            app:srcCompat="@drawable/alerts"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="660dp" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="60dp"
            android:layout_height="54dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/suitcase_icon_desc"
            app:srcCompat="@drawable/suitcase"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="660dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="65dp"
            android:layout_height="54dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/home_icon_desc"
            app:srcCompat="@drawable/home1"
            tools:layout_editor_absoluteX="162dp"
            tools:layout_editor_absoluteY="663dp" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="54dp"
            android:layout_height="71dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/global_connection_icon_desc"
            app:srcCompat="@drawable/globalconnection"
            tools:layout_editor_absoluteX="253dp"
            tools:layout_editor_absoluteY="651dp" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="69dp"
            android:layout_height="59dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/job_offer_icon_desc"
            app:srcCompat="@drawable/jobooffer"
            tools:layout_editor_absoluteX="323dp"
            tools:layout_editor_absoluteY="660dp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>