<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".complaint_details">


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/backgroundmobile" />

    <LinearLayout
        android:id="@+id/TopNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="3dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="55dp"
            android:layout_height="54dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/avatar_icon_desc" />

        <View
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="65dp"
            android:layout_height="54dp"
            tools:layout_editor_absoluteX="330dp"
            tools:layout_editor_absoluteY="16dp"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            app:srcCompat="@drawable/chat"
            android:contentDescription="@string/chat_icon_desc" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/Form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="3dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TopNavigation"
        app:layout_constraintVertical_bias="0.0">

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:text="Title"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="108dp" />


        <View
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:text="Description"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="108dp" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:background="@drawable/rounded_corner"
            android:ems="20"
            android:inputType="text"
            android:padding="15dp"
            android:text="description"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="225dp" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:text="upload the image"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:text="Complaint category"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:text="status"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:text="priority"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:text="Create date"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:text="Update date"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />



    </LinearLayout>


    <LinearLayout
        android:id="@+id/detailsOptions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Form"
        app:layout_constraintVertical_bias="1.0">


        <ImageView
            android:id="@+id/goback"
            android:layout_width="97dp"
            android:layout_height="65dp"
            android:layout_marginEnd="15dp"
            app:srcCompat="@drawable/nextbutton"
            tools:layout_editor_absoluteX="323dp"
            tools:layout_editor_absoluteY="660dp" />


        <ImageView
            android:id="@+id/edit"
            android:layout_width="70dp"
            android:layout_height="84dp"
            android:layout_marginEnd="15dp"
            app:srcCompat="@drawable/edit"
            tools:layout_editor_absoluteX="162dp"
            tools:layout_editor_absoluteY="663dp" />

        <ImageView
            android:id="@+id/delete"
            android:layout_width="60dp"
            android:layout_height="64dp"
            android:layout_marginEnd="15dp"
            app:srcCompat="@drawable/trash"
            tools:layout_editor_absoluteX="77dp"
            tools:layout_editor_absoluteY="474dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomNavigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Form"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="65dp"
            android:layout_height="54dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/alerts_icon_desc"
            app:srcCompat="@drawable/alerts"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="660dp" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="60dp"
            android:layout_height="54dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/suitcase_icon_desc"
            app:srcCompat="@drawable/suitcase"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="660dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="65dp"
            android:layout_height="54dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/home_icon_desc"
            app:srcCompat="@drawable/home1"
            tools:layout_editor_absoluteX="162dp"
            tools:layout_editor_absoluteY="663dp" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="54dp"
            android:layout_height="71dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/global_connection_icon_desc"
            app:srcCompat="@drawable/globalconnection"
            tools:layout_editor_absoluteX="253dp"
            tools:layout_editor_absoluteY="651dp" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="69dp"
            android:layout_height="59dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/job_offer_icon_desc"
            app:srcCompat="@drawable/jobooffer"
            tools:layout_editor_absoluteX="323dp"
            tools:layout_editor_absoluteY="660dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>